# Pricer

./: .gitmodules  CMakeLists.txt  TODO.txt  spconfig.py
benchmarks/: CMakeLists.txt  main.cc
benchmarks/math/: erf-benchmark.cc  exp-benchmark.cc  log-benchmark.cc  mkl-pricer-benchmark.cc  my-pricer-benchmark.cc  sleef-pricer-benchmark.cc  sqrt-benchmark.cc
cmake/: CCache.cmake  CGAL_FindPackageHandleStandardArgs.cmake  CGAL_GeneratorSpecificSettings.cmake  Configure.cmake  FindARB.cmake  FindERFA.cmake  FindFLINT.cmake  FindGMP.cmake  FindGoogleBenchmark.cmake  FindMKL.cmake  FindMPFR.cmake  FindR.cmake  FindSLEEF.cmake  catch2.cmake.in  googlebenchmark.cmake.in  trompeloeil.cmake.in
dispatcher-generator/: CMakeLists.txt  dispatcher-generator.cpp
src/: CMakeLists.txt  main.cpp
src/IO/CSV/: io_csv.cpp
src/include/: allocate.h  context.h  io_csv.h  market_data.h  my_pricer.h  portfolio.h  pricer-base.h  sleef_pricer.h
src/interface/: portfolio.cc
src/math/: erf_wrapper.c  erf_wrapper.h  exp_wrapper.c  glibc-2.28_erf.c  glibc-2.28_erf.h  glibc-2.28_exp.c  glibc-2.28_exp.h  glibc-2.28_log.c  glibc-2.28_log.h  glibc-2.28_sqrt.c  glibc-2.28_sqrt.h  mkl_pricer.c  mkl_pricer.h  sqrt_wrapper.c  sqrt_wrapper.h
src/math/IO/CSV/: io_csv.cpp  io_csv.h
src/math/IO/R/: R-IO.cc  R-IO.h
src/math/include/: erfc.h  market_data.h
src/math/pricers/: mkl_pricer.c  mkl_pricer.h  my_pricer.cc  pricer-base.h  pricer.cc  pricer.h  sleef_pricer.c  sleef_pricer.cc  sleef_pricer.h
src/memory/: allocate.h  context.cc  context.h  memory.cc  memory.h
tests/: CMakeLists.txt  main.cc
tests/IO/: io_tests.cc
tests/math/: Erf-Tests.c  erf-test.cc  exp-test.cc  log-test.cc  sqrt-test.cc
tests/math/pricers/: Pricer.h  mkl-pricer-test.cc  sleef-pricer-test.cc
